--- a/back_end/templates/Movie.html
+++ b/back_end/templates/Movie.html
@@ -16,9 +16,13 @@
     $(function(){
       $('#btnSignIn').click(function(evt){
         evt.preventDefault();
-        $.get('http://localhost:3000/request', function(movies) {
+        $.get('http://localhost:3000/requestMovies', function(movies) {
                 $( ".lead2" ).empty();
-                $(".lead2").append(JSON.stringify(movies)); // show the list
+                $(".lead2").append("<tr> <th> Name </th> </tr>")
+                for (i = 0; i < movies.length; i++){
+                  $(".lead2").append("<tr> <th>"+movies[i]['name']+"</th> </tr>");
+                }
+                //$(".lead2").append(JSON.stringify(movies)); // show the list
 
             });
       });
@@ -53,8 +57,8 @@
               <!--<img src="http://localhost:3000/freshpotatoes.png">-->
               <a button id="btnSignIn" class="btn btn-lg btn-default">Find Movies</a> 
             </p>
-            <p class="lead2">
-            </p>
+            <table class="lead2" border="1">
+            </table>
           
           </div>
 
