--- a/back_end/templates/review.html
+++ b/back_end/templates/review.html
@@ -41,8 +41,11 @@
         <div class="cover-container">
 
           <div class="masthead clearfix">
+
             <div class="inner">
+
               <nav class="navbar navbar-inverse">
+								<a href="#" class="navbar-left"><img src="/freshpotatoes" width="100" height="100"></a>
 							 <div class="container-fluid">
 								 <div class="navbar-header">
 									 <a class="navbar-brand" href="/review">Leave a Review</a>
@@ -55,13 +58,14 @@
 								 </ul>
 							 </div>
 						 </nav>
-
             	<div class="topnav" id="myTopnav">
+
 					       <!--<a href="#home">
 					         <img src="http://localhost:3000/freshpotatoes.png" width="80" height="80" alt="Chec">
 
 					       </a> -->
 					       <h1 class="masthead-brand">Fresh Potatoes</h1>
+								 
 				      </div>
             </div>
           </div>
