--- a/back_end/templates/review.html
+++ b/back_end/templates/review.html
@@ -58,47 +58,37 @@
 								 </ul>
 							 </div>
 						 </nav>
-            	<div class="topnav" id="myTopnav">
-
-					       <!--<a href="#home">
-					         <img src="http://localhost:3000/freshpotatoes.png" width="80" height="80" alt="Chec">
-
-					       </a> -->
-					       <h1 class="masthead-brand">Fresh Potatoes</h1>
-								 
-				      </div>
             </div>
           </div>
 
-          <div class="inner cover">
+          <div class="inner-cover">
             <form>
               <div class="form-group">
                 <label>Your Review</label>
-            </form>
-            <br>
-              <style type="text/css">
-              textarea.html-text-box {background-color:#ffffff;background-image:url(http://);background-repeat:no-repeat;background-attachment:fixed;border-width:1;border-style:solid;border-color:#cccccc;font-family:Arial;font-size:12pt;color:#000000;}
-              input.html-text-box {background-color:#ffffff;font-family:Arial;font-size:12pt;color:#000000;}
-              </style>
-              <form method="post" action="http://"><textarea name="comments" cols="80" rows="5" class="html-text-box">Please write your review here...</textarea>
+                <input type="text" class="form-control" id="inputAddress" placeholder="Write your review here..." required>
               </div>
 
               <div class="input-append">
  							 <select class="form-control">
  							  <option value="opt1">Thor: Ragnarok</option>
  							   <option value="opt2">Daddy's Home 2</option>
-                 <option value="opt3">Justice League</option>
-                 <option value="opt4">Jigsaw</option>
-                 <option value="opt5">A Bad Mom's Christmas</option>
  							</select>
  						 </div>
 
-              <div class="rating">
-                <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="Rocks!">5 stars</label>
-                <input type="radio" id="star4" name="rating" value="4" /><label for="star4" title="Pretty good">4 stars</label>
-                <input type="radio" id="star3" name="rating" value="3" /><label for="star3" title="Meh">3 stars</label>
-                <input type="radio" id="star2" name="rating" value="2" /><label for="star2" title="Kinda bad">2 stars</label>
-                <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="Sucks big time">1 star</label>
+              <div class="radio-inline">
+                <label class="radio-inline"><input type="radio" name="optradio" required>1</label>
+              <!-- </div>
+              <div class="radio-inline"> -->
+                <label class="radio-inline"><input type="radio" name="optradio" required>2</label>
+              <!-- </div>
+              <div class="radio-inline"> -->
+                <label class="radio-inline"><input type="radio" name="optradio" required>3</label>
+              <!-- </div>
+              <div class="radio-inline"> -->
+                <label class="radio-inline"><input type="radio" name="optradio" required>4</label>
+              <!-- </div>
+              <div class="radio-inline"> -->
+                <label class="radio-inline"><input type="radio" name="optradio" required>5</label>
               </div>
 
               <div>
