wrong branch just pushing more selections for buy a ticket.

--- a/back_end/templates/ticket.html
+++ b/back_end/templates/ticket.html
@@ -84,6 +84,9 @@
    							 <select class="form-control" required>
    							  <option value="opt1">Thor: Ragnarok</option>
    							   <option value="opt2">Daddy's Home 2</option>
+                   <option value="opt2">Justice League</option>
+                   <option value="opt2">Jigsaw</option>
+                   <option value="opt2">A Bad Mom's Christmas</option>
    							</select>
    						 </div>
              </form>
