--- a/back_end/templates/ticket.html
+++ b/back_end/templates/ticket.html
@@ -84,12 +84,38 @@
    							 <select class="form-control" required>
    							  <option value="opt1">Thor: Ragnarok</option>
    							   <option value="opt2">Daddy's Home 2</option>
-                   <option value="opt2">Justice League</option>
-                   <option value="opt2">Jigsaw</option>
-                   <option value="opt2">A Bad Mom's Christmas</option>
+                   <option value="opt3">Justice League</option>
+                   <option value="opt4">Jigsaw</option>
+                   <option value="opt5">A Bad Mom's Christmas</option>
    							</select>
    						 </div>
-             </form>
+             </form>  
+             <br>
+
+              <form>
+             <!--Search Bar with drop down menu-->
+                <div class="time-select">
+                 <select class="form-control" required>
+                  <option value="opt1">02:30:00</option>
+                  <option value="opt2">05:50:00</option>
+                  <option value="opt3">06:00:00</option>
+                  <option value="opt4">10:40:00</option>
+                  <option value="opt5">12:30:00</option>
+                  <option value="opt6">09:15:00</option>
+                  <option value="opt7">11:45:00</option>
+                </select>
+            <div class = "label-date">
+                <label for="movie">Choose date:</label>
+            </div>
+             <div class="input-append">
+              <form>
+                <div>
+                  <input type="date" id="movie" name="movie">
+                </div>
+              </form
+
+             </div>
+           </form>                 
               <button type="button" class="btn btn-primary" id="subMov" onclick="window.location.href='/movieticket'"> Submit</button>
               <!-- onclick="window.location.href='/movieticket'" -->
 
