changed the div name of your review

--- a/back_end/templates/review.html
+++ b/back_end/templates/review.html
@@ -66,7 +66,7 @@
 
           <div class="inner-cover">
 						<form id='formThing'>
-								<div class="form-group">
+								<div class="review-group">
 										<label>Your Review</label>
 									</form>
 									<br>
