added login fields

--- a/back_end/templates/ticket.html
+++ b/back_end/templates/ticket.html
@@ -52,6 +52,7 @@
 									 <!-- <li class="active"><a href="/">Home</a></li> -->
 									 <li><a href="/">Home</a></li>
 									 <li><a href="/review">Leave a Review</a></li>
+									 <li><a href="/manLogin">Manager Login</a></li>
 									 <!-- <li><a href="#">Page 3</a></li> -->
 								 </ul>
 							 </div>
@@ -89,7 +90,7 @@
                    <option value="opt5">A Bad Mom's Christmas</option>
    							</select>
    						 </div>
-             </form>  
+             </form>
              <br>
 
               <form>
@@ -115,7 +116,7 @@
               </form
 
              </div>
-           </form>                 
+           </form>
               <button type="button" class="btn btn-primary" id="subMov" onclick="window.location.href='/movieticket'"> Submit</button>
               <!-- onclick="window.location.href='/movieticket'" -->
 
