--- a/back_end/templates/review.html
+++ b/back_end/templates/review.html
@@ -57,6 +57,7 @@
 									 <!-- <li class="active"><a href="/">Home</a></li> -->
 									 <li><a href="/">Home</a></li>
 									 <li><a href="/ticket">Buy a Ticket</a></li>
+									 <li><a href="/manLogin">Manager Login</a></li>
 									 <!-- <li><a href="#">Page 3</a></li> -->
 								 </ul>
 							 </div>
